Prevent scrolling outside of menu on mobile.

--- a/client/src/components/Menu/Menu.scss
+++ b/client/src/components/Menu/Menu.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 3.5rem;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
